--- a/voting/src/main/res/layout/activity_main_voting.xml
+++ b/voting/src/main/res/layout/activity_main_voting.xml
@@ -16,15 +16,20 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="186dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="158dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="159dp"
-            android:text="@string/ongoing_votes"
+            android:id="@+id/proposalOverViewTitle"
+            android:layout_width="291dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingStart="10dp"
+            android:text="@string/all_votes"
             android:textSize="24sp"
             android:textStyle="bold" />
+
+        <Switch
+            android:id="@+id/uncastedToggle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
