Disable join button if user is in DAO

--- a/currencyii/src/main/res/layout/join_sw_row_data.xml
+++ b/currencyii/src/main/res/layout/join_sw_row_data.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <LinearLayout
@@ -107,13 +108,15 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="text" />
+
             </LinearLayout>
+
         </LinearLayout>
 
         <Button
             android:id="@+id/click_to_join"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:text="join"
             android:textColor="@color/colorAccent" />
