--- a/voting/src/main/res/layout/activity_main_voting.xml
+++ b/voting/src/main/res/layout/activity_main_voting.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
-            android:text="@string/all_votes"
+            android:text="@string/all_proposals"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/colorPrimary"
-            android:text="@string/initiate_vote"
+            android:text="@string/create_proposal"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
