--- a/voting/src/main/res/layout/initiate_dialog.xml
+++ b/voting/src/main/res/layout/initiate_dialog.xml
@@ -10,6 +10,8 @@
         android:id="@+id/proposalInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30px"
+        android:layout_marginRight="30px"
         android:hint="P != NP" />
 
 </LinearLayout>
