Make list entries clickable

--- a/currencyii/src/main/res/layout/fragment_join_network.xml
+++ b/currencyii/src/main/res/layout/fragment_join_network.xml
@@ -22,7 +22,8 @@
             <ListView
                 android:id="@+id/list_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:focusable="true" />
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
