--- a/currencyii/src/main/res/layout/join_sw_row_data.xml
+++ b/currencyii/src/main/res/layout/join_sw_row_data.xml
@@ -118,6 +118,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
+            android:focusable="false"
             android:text="join"
             android:textColor="@color/colorAccent" />
 
