--- a/currencyii/src/main/res/layout/fragment_dao_login_choice.xml
+++ b/currencyii/src/main/res/layout/fragment_dao_login_choice.xml
@@ -2,32 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
     android:orientation="vertical"
     android:padding="16dp"
     android:label="DAO Login Screen"
     tools:context=".ui.bitcoin.DAOLoginFragment">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textView15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DAO Start Screen"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Choose one of the following options to enter your account." />
-
-    </LinearLayout>
+        android:text="Choose one of the following options to enter your account." />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,6 +33,14 @@
             android:layout_height="wrap_content"
             android:text="If you previously created/imported and want to enter again, use this option." />
 
+        <Switch
+            android:id="@+id/production_testnet_input_load_existing"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Production / TestNet" />
+
         <Button
             android:id="@+id/load_existing_button"
             style="@style/Widget.AppCompat.Button.Colored"
@@ -56,7 +49,6 @@
             android:text="Load Existing" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
