Refresh the Home/Bitcoin screen and add copy to clipboard buttons

--- a/currencyii/src/main/res/layout/fragment_bitcoin.xml
+++ b/currencyii/src/main/res/layout/fragment_bitcoin.xml
@@ -2,21 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/bitcoin_refresh_swiper"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20px">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -24,93 +19,170 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/walletStatus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Status: N/A" />
+                    android:layout_marginBottom="16dp"
+                    android:text="On this page we will show some information about your loaded bitcoin wallet and provide you some actions to manage it." />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/light_gray"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="64dp"
+                        android:text="Total Balance"
+                        android:textColor="?android:textColorPrimary"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                    <TextView
+                        android:id="@+id/walletBalance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="N/A Bitcoin" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/light_gray"
+                    android:layout_marginBottom="16dp"/>
 
                 <TextView
-                    android:id="@+id/walletBalance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Bitcoin available: N/A" />
-
-                <EditText
-                    android:id="@+id/walletSeed"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="seed and creation date"
-                    android:inputType="textPersonName" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:text="Bitcoin Network" />
 
                 <TextView
                     android:id="@+id/chosenNetwork"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Network: N/A" />
+                    android:layout_marginBottom="16dp"
+                    android:text="N/A" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Public Bitcoin Address"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="This is your public address you can send bitcoin to, to load money into the wallet." />
+
+                        <TextView
+                            android:id="@+id/protocolKey"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:text="N/A" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/button_copy_public_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_gravity="right"
+                        android:layout_marginLeft="12dp"
+                        android:text="Copy" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Wallet Seed"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="This is the wallet seed with your words and creation time, use it to later import the same wallet." />
+
+                        <TextView
+                            android:id="@+id/walletSeed"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:text="N/A" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/button_copy_wallet_seed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_marginLeft="12dp"
+                        android:layout_gravity="right"
+                        android:text="Copy" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:text="Public Key" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_height="wrap_content" android:text="This is the public key derived from your wallet seed that is used in the DAO protocol to identify you." />
 
                 <TextView
                     android:id="@+id/yourPublicHex"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Public Key:" />
-
-                <TextView
-                    android:id="@+id/progressField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Progress: waiting..." />
-
-                <EditText
-                    android:id="@+id/protocolKey"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="protocol address"
-                    android:inputType="textPersonName" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/import_custom_keys"
-                        android:layout_width="196dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:enabled="true"
-                        android:text="Import Own Keys" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:baselineAligned="false"
-                android:gravity="bottom"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Your wallet actions"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-
+                    android:layout_marginBottom="16dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:text="N/A" />
 
             </LinearLayout>
+        </ScrollView>
 
-        </LinearLayout>
-    </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
