--- a/currencyii/src/main/res/layout/fragment_blockchain_download.xml
+++ b/currencyii/src/main/res/layout/fragment_blockchain_download.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/textView4"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Please Wait Whilst the Ketting is Downloading"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please wait while the ketting is downloading." />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,11 +22,28 @@
         android:gravity="bottom"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/bitcoin_progress_continue"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Continue Regardless" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/bitcoin_progress_continue"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Continue Regardless" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Note that you will have to wait on this sync before you can do anything. "
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -43,8 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="20px">
+        android:orientation="vertical">
 
         <ProgressBar
             android:id="@+id/bitcoin_download_progress"
@@ -53,7 +73,8 @@
             android:layout_height="500dp"
             android:max="100"
             android:progress="10"
-            android:progressDrawable="@drawable/progress_circle"/>
+            android:progressDrawable="@drawable/progress_circle" />
 
     </LinearLayout>
+
 </FrameLayout>
