Refresh the import/create new wallet screen

--- a/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
+++ b/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
@@ -2,71 +2,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.bitcoin.DaoImportOrCreate">
+    tools:context=".ui.bitcoin.DAOCreateFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView5"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create or Import Wallet"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView9"
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fill in your details here to create/import a wallet. If you do not have a seed, press the generate new seed button. " />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/seed_word_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fill in your details here to create/import a wallet" />
+                android:ems="10"
+                android:hint="Mnemonic seed (required)"
+                android:inputType="textVisiblePassword"
+                android:textSize="14sp" />
 
+            <EditText
+                android:id="@+id/seed_number_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Creation number (required)"
+                android:inputType="number"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/generate_new_seed"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Generate New Seed" />
+
+            <Button
+                android:id="@+id/load_debug_seed"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="20dp"
+                android:text="Load Debug Seed"
+                android:layout_marginBottom="16dp"
+                android:textSize="8dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/light_gray" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="If you have a private key with balance on it that you want to use, enter it here." />
+
+            <EditText
+                android:id="@+id/private_keys_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Additional private key (optional)"
+                android:inputType="textMultiLine"
+                android:lines="1"
+                android:textSize="14sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/light_gray" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Choose whether you are using the Bitcoin production net or test net here." />
+
+            <Switch
+                android:id="@+id/production_testnet_input"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Production / TestNet" />
         </LinearLayout>
-
-        <EditText
-            android:id="@+id/seed_word_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Mnemonic Seed"
-            android:inputType="textVisiblePassword"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/seed_number_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Creation Number"
-            android:inputType="number"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/private_keys_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="Additional Private Key (optional)"
-            android:inputType="textMultiLine"
-            android:lines="1"
-            android:textSize="14sp" />
-
-        <Switch
-            android:id="@+id/production_testnet_input"
-            style="@style/TextAppearance.AppCompat.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Production / TestNet"
-            android:checked="true" />
 
         <Button
             android:id="@+id/load_wallet_button"
@@ -74,28 +114,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Load Wallet" />
-
-        <Button
-            android:id="@+id/generate_new_seed"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Generate New Seed" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Generating a seed will overwrite the current filled in seed"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-
-        <Button
-            android:id="@+id/load_debug_seed"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Load Debug Seed" />
 
     </LinearLayout>
 </LinearLayout>
