--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/bitcoinFragment"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.BitcoinFragment"
-        android:label="DAO Overview Screen"
+        android:label="Home"
         tools:layout="@layout/fragment_bitcoin">
         <action
             android:id="@+id/action_bitcoinFragment_to_blockchainDownloadFragment"
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/daoLoginChoice"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.DAOLoginFragment"
-        android:label="DAO Start Screen">
+        android:label="Welcome">
         <action
             android:id="@+id/action_daoLoginChoice_to_daoImportOrCreate"
             app:destination="@id/daoImportOrCreate"
@@ -163,6 +163,6 @@
     <fragment
         android:id="@+id/myWalletFragment"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.MyWalletFragment"
-        android:label="My Wallet"
+        android:label="Proposals"
         tools:layout="@layout/fragment_my_wallet" />
 </navigation>
