--- a/currencyii/src/main/res/layout/fragment_my_proposals.xml
+++ b/currencyii/src/main/res/layout/fragment_my_proposals.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.bitcoin.MyWalletFragment"
+    tools:context=".ui.bitcoin.MyProposalsFragment"
     android:padding="16dp">
 
     <LinearLayout
