--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -161,8 +161,8 @@
             app:popExitAnim="@anim/fragment_fade_exit" />
     </fragment>
     <fragment
-        android:id="@+id/myWalletFragment"
-        android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.MyWalletFragment"
-        android:label="Proposals"
-        tools:layout="@layout/fragment_my_wallet" />
+        android:id="@+id/myProposals"
+        android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.MyProposalsFragment"
+        android:label="@string/proposals"
+        tools:layout="@layout/fragment_my_proposals" />
 </navigation>
