--- a/voting/src/main/res/layout/activity_main_voting.xml
+++ b/voting/src/main/res/layout/activity_main_voting.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingHorizontal="16dp"
     android:paddingTop="16dp"
     android:orientation="vertical">
 
@@ -19,6 +18,7 @@
             android:text="@string/all_proposals"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:layout_marginLeft="12dp"
             android:layout_weight="2"/>
 
         <Switch
@@ -33,6 +33,7 @@
         android:id="@+id/blockList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="12dp"
         android:layout_weight="1"/>
 
     <Button
@@ -40,6 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="@string/create_proposal"/>
+        android:layout_marginVertical="12dp"
+        android:text="@string/create_proposal"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorPrimary" />
 
 </LinearLayout>
