--- a/currencyii/src/main/res/layout/fragment_bitcoin.xml
+++ b/currencyii/src/main/res/layout/fragment_bitcoin.xml
@@ -49,7 +49,7 @@
                         android:id="@+id/walletBalance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="N/A Bitcoin" />
+                        android:text="N/A BTC" />
                 </LinearLayout>
 
                 <View
