--- a/currencyii/src/main/res/layout/fragment_create_sw.xml
+++ b/currencyii/src/main/res/layout/fragment_create_sw.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Entrance fee (double)" />
+                android:text="Entrance fee (Satoshi)" />
 
             <EditText
                 android:id="@+id/entrance_fee_tf"
