--- a/trustchain-trader/src/main/res/layout/fragment_trader.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_trader.xml
@@ -127,11 +127,19 @@
         android:textStyle="bold" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titlePayloadList" />
+
     <LinearLayout
         android:id="@+id/Transactions"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/titlePayloadList"
+        app:layout_constraintTop_toBottomOf="@id/divider3"
         app:layout_constraintBottom_toBottomOf="parent"
         android:weightSum="2"
         android:orientation="horizontal">
